modified draft somewhat

--- a/manuscript/PNAS/PNAS_submission.tex
+++ b/manuscript/PNAS/PNAS_submission.tex
@@ -138,7 +138,7 @@ of the National Academy of Sciences of the United States of America}
 %% Molecular, Murcia, Spain}, \and Franklin Sonnery\affil{2}{}}
 
 \author{Joshua T. Vogelstein\affil{1}{Johns Hopkins University, Baltimore, MD}, 
-R. Jacob Vogelstein\affil{1}{}, 
+R. Jacob Vogelstein\affil{1}{}\affil{2}{Johns Hopkins University Applied Physics Laboratory, Laurel, MD}, 
 Carey E. Priebe\affil{1}{}}
 
 \contributor{Submitted to Proceedings of the National Academy of Sciences
@@ -247,7 +247,7 @@ If the graphs may have different numbers of vertices, and are unlabeled, we cons
 %\tr{Trivially, this argument also applies to graphs with (self-) loops, and
 %directed, colored, or weighted edges, and hypergraphs.}
 
-Several points of note: Isolated vertices are ignored in our equivalence relation; the class-conditional signal is entirely encompassed by the connectivity structure; the graph isomorphism problem is computationally hard \cite{ConroyLouis97,ZaslavskiyVert08}; and the argument employed here does not capture the concept of ``nearness implies likelihood of similar class''---we simply rely on atomic behavior.
+Several points of note: isolated vertices are ignored in our equivalence relation; the class-conditional signal is entirely encompassed by the connectivity structure; the graph isomorphism problem is computationally hard \cite{ConroyLouis97,ZaslavskiyVert08}; and the argument employed here does not capture the concept of ``nearness implies likelihood of similar class''---we simply rely on atomic behavior.
 
 %\appendix
 \section*{Appendix 2: Simulation} \label{simulation}
@@ -260,7 +260,7 @@ Importantly, conducting this experiment {\it in actu} is not beyond current tech
 
 
 \begin{acknowledgments}
-The authors would like to acknowledge helpful discussions with J Lande and B Vogelstein.
+The authors would like to acknowledge helpful discussions with J Lande, A Vaziri, and B Vogelstein. This work was supported in part by the NSA Research Program in Applied Neuroscience.
 \end{acknowledgments}
 
 %% PNAS does not support submission of supporting .tex files such as BibTeX.
@@ -288,124 +288,127 @@ The authors would like to acknowledge helpful discussions with J Lande and B Vog
 %% Enter the largest bibliography number in the facing curly brackets
 %% following \begin{thebibliography}
 
-\begin{thebibliography}{26}
+\begin{thebibliography}{10}
 
 \bibitem{Plato97}
-Plato.
-\newblock {\em Plato: complete works}.
-\newblock Hackett Pub Co,  (1997).
+Plato, {\em Plato: complete works}.
+\newblock Hackett Pub Co, 1997.
 
 \bibitem{Descartes1641}
-Descartes, R.
-\newblock {\em Meditationes de prima philosophia}.
-\newblock  (1641).
+R.~Descartes, {\em Meditationes de prima philosophia}.
+\newblock 1641.
 
 \bibitem{Davidson70}
-Davidson, D.
-\newblock {\em Experience and Theory}, chapter Mental Events.
-\newblock Duckworth (1970).
+D.~Davidson, {\em Experience and Theory}, ch.~Mental Events.
+\newblock Duckworth, 1970.
 
 \bibitem{SpornsKotter05}
-Sporns, O., Tononi, G., and Kotter, R.
-\newblock {\em PLoS Computational Biology}{ \bf 1}(4), e42 (2005).
+O.~Sporns, G.~Tononi, and R.~Kotter, ``The human connectome: A structural
+  description of the human brain,'' {\em PLoS Computational Biology}, vol.~1,
+  no.~4, p.~e42, 2005.
 
 \bibitem{LichtmanSanes08}
-Lichtman, J.~W., Livet, J., and Sanes, J.~R.
-\newblock {\em Nat Rev Neurosci}{ \bf 9}(6), 417--422 Jun  (2008).
+J.~W. Lichtman, J.~Livet, and J.~R. Sanes, ``A technicolour approach to the
+  connectome.,'' {\em Nat Rev Neurosci}, vol.~9, pp.~417--422, Jun 2008.
 
 \bibitem{Seung09}
-Seung, H.
-\newblock {\em Neuron}{ \bf 62}(1), 17--29 (2009).
+H.~Seung, ``{Reading the Book of Memory: Sparse Sampling versus Dense Mapping
+  of Connectomes},'' {\em Neuron}, vol.~62, no.~1, pp.~17--29, 2009.
 
 \bibitem{Kim95}
-Kim, J.
-\newblock {\em Phiilosophy of Mind}.
-\newblock Westview Press, second edition,  (2005).
+J.~Kim, {\em Phiilosophy of Mind}.
+\newblock Westview Press, second~ed., 2005.
 
 \bibitem{DGL96}
-Devroye, L., Gy{\"o}rfi, L., and Lugosi, G.
-\newblock {\em {A Probabilistic Theory of Pattern Recognition}}.
-\newblock Springer,  (1996).
+L.~Devroye, L.~Gy{\"o}rfi, and G.~Lugosi, {\em {A Probabilistic Theory of
+  Pattern Recognition}}.
+\newblock Springer, 1996.
 
 \bibitem{Devroye83}
-Devroye, L.
-\newblock {\em Probability Theory and Related Fields}{ \bf 62}(4), 475--483
-  (1983).
+L.~Devroye, ``{On arbitrarily slow rates of global convergence in density
+  estimation},'' {\em Probability Theory and Related Fields}, vol.~62, no.~4,
+  pp.~475--483, 1983.
 
 \bibitem{Popper}
-Popper, K.
-\newblock { \bf } (1959).
+K.~Popper, ``{The logic of scientific discovery},'' 1959.
 
 \bibitem{WhiteBrenner86}
-White, J., Southgate, E., Thomson, J.~N., and Brenner, S.
-\newblock {\em Philosophical Transactions of Royal Society London. Series B,
-  Biological Sciences}{ \bf 314}(1165), 1--340 (1986).
+J.~White, E.~Southgate, J.~N. Thomson, and S.~Brenner, ``The structure of the
+  nervous system of the nematode caenorhabditis elegans.,'' {\em Philosophical
+  Transactions of Royal Society London. Series B, Biological Sciences},
+  vol.~314, no.~1165, pp.~1--340, 1986.
 
 \bibitem{DenkHorstmann04}
-W.~Denk, W. and Horstmann, H.
-\newblock {\em PLOS Biol.}{ \bf 2}, e329 (2004).
+W.~W.~Denk and H.~Horstmann, ``Serial block-face scanning electron microscopy
+  to reconstruct three-dimensional tissue nanostructure,'' {\em PLOS Biol.},
+  vol.~2, p.~e329, 2004.
 
 \bibitem{BriggmanDenk06}
-Briggman, K. and Denk, W.
-\newblock {\em Current opinion in neurobiology}{ \bf 16}(5), 562--570 (2006).
+K.~Briggman and W.~Denk, ``{Towards neural circuit reconstruction with volume
+  electron microscopy techniques},'' {\em Current opinion in neurobiology},
+  vol.~16, no.~5, pp.~562--570, 2006.
 
 \bibitem{MackeBorst08}
-Macke, J.~H., Maack, N., Gupta, R., Denk, W., Sch√∂lkopf, B., and Borst, A.
-\newblock {\em J Neurosci Methods}{ \bf 167}(2), 349--357 Jan  (2008).
+J.~H. Macke, N.~Maack, R.~Gupta, W.~Denk, B.~Sch√∂lkopf, and A.~Borst,
+  ``Contour-propagation algorithms for semi-automated reconstruction of neural
+  processes.,'' {\em J Neurosci Methods}, vol.~167, pp.~349--357, Jan 2008.
 
 \bibitem{Mishchenko09}
-Mishchenko, Y.
-\newblock {\em J Neurosci Methods}{ \bf 176}(2), 276--289 Jan  (2009).
+Y.~Mishchenko, ``Automation of 3d reconstruction of neural tissue from large
+  volume of conventional serial section transmission electron micrographs.,''
+  {\em J Neurosci Methods}, vol.~176, pp.~276--289, Jan 2009.
 
 \bibitem{LuLichtman09}
-Lu, J., Fiala, J.~C., and Lichtman, J.~W.
-\newblock {\em PLoS ONE}{ \bf 4}(5), e5655 05  (2009).
+J.~Lu, J.~C. Fiala, and J.~W. Lichtman, ``Semi-automated reconstruction of
+  neural processes from large numbers of fluorescence images,'' {\em PLoS ONE},
+  vol.~4, p.~e5655, 05 2009.
 
 \bibitem{HornJohnson90}
-Horn, R. and Johnson, C.
-\newblock {\em {Matrix analysis}}.
-\newblock Cambridge Univ Pr,  (1990).
+R.~Horn and C.~Johnson, {\em {Matrix analysis}}.
+\newblock Cambridge Univ Pr, 1990.
 
 \bibitem{ConroyLouis97}
-Conroy, J.~M., Kratzer, S.~G., and Podrazik, L.~J.
-\newblock In {\em Society for Industrial and Applied Mathematics},  (1997).
+J.~M. Conroy, S.~G. Kratzer, and L.~J. Podrazik, ``A continuous method for the
+  quadratic assignment problem,'' in {\em Society for Industrial and Applied
+  Mathematics}, 1997.
 
 \bibitem{ZaslavskiyVert08}
-Zaslavskiy, M., Bach, F., and Vert, J.
-\newblock {\em IEEE Transactions on Pattern Analysis and Machine Intelligence}{
-  \bf 31}, 2227--2242 (2008).
+M.~Zaslavskiy, F.~Bach, and J.~Vert, ``{A path following algorithm for the
+  graph matching problem},'' {\em IEEE Transactions on Pattern Analysis and
+  Machine Intelligence}, vol.~31, pp.~2227--2242, 2008.
 
 \bibitem{Durbin87}
-Durbin, R.~M.
-\newblock {\em Studies on the Development and Organisation of the Nervous
+R.~M. Durbin, {\em Studies on the Development and Organisation of the Nervous
   System of Caenorhabditis elegans}.
-\newblock PhD thesis, University of Cambridge,  (1987).
+\newblock PhD thesis, University of Cambridge, 1987.
 
 \bibitem{deBonoMaricq05}
-de~Bono, M. and Maricq, A.~V.
-\newblock {\em Annu Rev Neurosci}{ \bf 28}, 451--501 (2005).
+M.~de~Bono and A.~V. Maricq, ``Neuronal substrates of complex behaviors in c.
+  elegans.,'' {\em Annu Rev Neurosci}, vol.~28, pp.~451--501, 2005.
 
 \bibitem{VarshneyChklovskii09}
-Varshney, L., Chen, B., Paniagua, E., Hall, D., and Chklovskii, D.
-\newblock {\em ArXiv}{ \bf } (2009).
+L.~Varshney, B.~Chen, E.~Paniagua, D.~Hall, and D.~Chklovskii, ``{Structural
+  Properties of the Caenorhabditis elegans Neuronal Network},'' {\em ArXiv},
+  2009.
 
 \bibitem{ChalasaniBargmann07}
-Chalasani, S.~H., Chronis, N., Tsunozaki, M., Gray, J.~M., Ramot, D., Goodman,
-  M.~B., and Bargmann, C.~I.
-\newblock {\em Nature}{ \bf 450}(7166), 63--70 Nov  (2007).
+S.~H. Chalasani, N.~Chronis, M.~Tsunozaki, J.~M. Gray, D.~Ramot, M.~B. Goodman,
+  and C.~I. Bargmann, ``Dissecting a circuit for olfactory behaviour in
+  caenorhabditis elegans.,'' {\em Nature}, vol.~450, pp.~63--70, Nov 2007.
 
 \bibitem{VaziriShank08}
-Vaziri, A., Tang, J., Shroff, H., and Shank, C.~V.
-\newblock {\em Proc Natl Acad Sci U S A}{ \bf 105}(51), 20221--20226 Dec
-  (2008).
+A.~Vaziri, J.~Tang, H.~Shroff, and C.~V. Shank, ``Multilayer three-dimensional
+  super resolution imaging of thick biological samples.,'' {\em Proc Natl Acad
+  Sci U S A}, vol.~105, pp.~20221--20226, Dec 2008.
 
 \bibitem{HelmstaedterDenk08}
-Helmstaedter, M., Briggman, K.~L., and Denk, W.
-\newblock {\em Curr Opin Neurobiol}{ \bf 18}(6), 633--641 Dec  (2008).
+M.~Helmstaedter, K.~L. Briggman, and W.~Denk, ``3d structural imaging of the
+  brain with photons and electrons.,'' {\em Curr Opin Neurobiol}, vol.~18,
+  pp.~633--641, Dec 2008.
 
 \bibitem{BuckinghamSattelle08}
-Buckingham, S.~D. and Sattelle, D.~B.
-\newblock {\em Invert Neurosci}{ \bf 8}(3), 121--131 Sep  (2008).
+S.~D. Buckingham and D.~B. Sattelle, ``Strategies for automated analysis of c.
+  elegans locomotion.,'' {\em Invert Neurosci}, vol.~8, pp.~121--131, Sep 2008.
 
 \end{thebibliography}
 
@@ -426,9 +429,8 @@ Buckingham, S.~D. and Sattelle, D.~B.
 
 \begin{figure}[h!]
 % \centering 
-\includegraphics[width=.5\linewidth]{Lhatplot}
-\caption{C.~elegans graph classification simulation results. $\hL^{1000}_{F}(g_n)$ is plotted as a function of class-conditional training sample size $n_j$, suggesting that for $\varepsilon=0.1$ we can determine that $\MeB$ holds with $99\%$ confidence with just a few hundred training samples generated from $F_{BM}$. Each dot depicts an estimate for $L_{F}(g_n)$; standard errors are $(L_{F}(g_n)(1-L_{F}(g_n))/1000)^{1/2}$. E.g., $n_j = 180$ ; $k_n = 53$ ; $\hL^{1000}_{F}(g_n) = 0.057$; standard error less than 0.01. We reject $H_0: L_{F}(g^*) \geq 0.10$ at $\alpha=0.01$. $L_{F}(g^*) \approx 0$ for this simulation.
-}
+% \includegraphics[width=.5\linewidth]{Lhatplot}
+\caption{C.~elegans graph classification simulation results. $\hL^{1000}_{F}(g_n)$ is plotted as a function of class-conditional training sample size $n_j$, suggesting that for $\varepsilon=0.1$ we can determine that $\MeB$ holds with $99\%$ confidence with just a few hundred training samples generated from $F_{BM}$. Each dot depicts an estimate for $L_{F}(g_n)$; standard errors are $(L_{F}(g_n)(1-L_{F}(g_n))/1000)^{1/2}$. E.g., $n_j = 180$ ; $k_n = 53$ ; $\hL^{1000}_{F}(g_n) = 0.057$; standard error less than 0.01. We reject $H_0: L_{F}(g^*) \geq 0.10$ at $\alpha=0.01$. $L_{F}(g^*) \approx 0$ for this simulation.}
 \label{fig1}
 \end{figure}
 
