incorporated jacobs comments

--- a/manuscript/supervenience.tex
+++ b/manuscript/supervenience.tex
@@ -54,7 +54,7 @@ The ``mind-brain supervenience'' \tr{conjecture} suggests that all mental proper
 
 Questioning the relationship between the mind (thoughts, beliefs, preferences, emotions, intelligence, etc.) and the brain (the physical structure inside our skulls) dates back at least as far as 400~BCE, when Plato wrote the dialogues, in which he posited immateriality of the soul \cite{Plato97}. Approximately two millennia passed before these ideas reached their canonical form through Descartes's discussion of mind-body dualism \cite{Descartes1641}. Then, in the 20th century, Donald Davidson stated and popularized the mind-brain supervenience \tr{conjecture}, which claims that an agent cannot alter in some mental property without altering in some physical property \cite{Davidson70}. Contemporary fields of neural network theory and neuroscientific inquiry often assume mind-brain supervenience, or an even stronger assumption about mind-brain causality, but no previously proposed notion of supervenience seems amenable to empirical investigation. Here we define new versions of supervenience that formulate the \tr{conjecture} in rigorous mathematical terms and that can be experimentally tested \tr{as a hypothesis}.
 
-\tr{The primary contributions of this work are as follows.  First, a notion of supervenience emendable to empirical investigation is formally introduced.  This renders the mind-brain dualism debate a hypothesis, rather than an assumption.  Second, the limits of hypothesis testing to unravel supervenience hypotheses are provided.  Third, we posit a very general model of brains and their associated mental properties that admits a universally consistent classifier; that is, we prove that assuming the brain can be accurately represented by this model, and there is sufficient data, this algorithm is guaranteed to obtain the best possible results.  Fourth, simulations show this algorithm converges relatively rapidly.}
+\tr{The primary contributions of this work are as follows.  First, a notion of supervenience emendable to empirical investigation is formally introduced.  This renders the mind-brain dualism debate a hypothesis, rather than an assumption.  Second, in addition to expanding the space of questions amenable to hypothesis testing, we also demonstrate the the limits of hypothesis testing.  Third we posit a very general model of brains and their associated mental properties that admits statistical analysis in a graph theoretical and statistical framework.  Fourth, we prove that this formulation admits a universally consistent classifier (a result of general interest to graph classification, independent of the subject of the graphs).  Fifth we demonstrate through simulation that the proposed universally consistent classifer has reasonable convergence properties on simulated data.}
 
 Let $\mB$ be the observation space for some physical property, such as brain connectivity structure (i.e., connectome; see \cite{SpornsKotter05,LichtmanSanes08,Seung09}). Let $\mM$ be the (finite) indicator space for some mental property, such as knowing calculus. Thus, for $b \in \mB$ and $m \in \mM$, the pair $(b,m)$ represents a brain property/mind property pair.
 
@@ -68,7 +68,7 @@ Let $g:\mB \rightarrow \mM$ be a classifier, which takes as input an observed br
 $\mM$ is said to \textit{statistically supervene} on $\mB$ for distribution $F=F_{BM}$, denoted $\mM \overset{S}{\sim}_F \mB$, if and only if $L_{F}(g^*) = 0$.
 \end{defi}
 
-\tr{(Note that this definition does not imply a one-to-one mapping.)}  \tr{To allow for the possibility of only \emph{partial} supervenience,} \footnote{The following was stricken from the record, as I believed it to be a non-sequitor, but i partially replace it below: Unfortunately, it is in general impossible to determine whether $L_F(g^*)=0$ without knowing $F$. Therefore,} we relax the above statistical supervenience to define $\varepsilon$-\textit{supervenience}:
+\tr{(Note that this definition does not imply a one-to-one mapping.)}  \tr{To allow for the possibility of only \emph{partial} supervenience,} \footnote{\tr{The following was stricken from the record, as I believed it to be a non-sequitor, but i partially replace it below: Unfortunately, it is in general impossible to determine whether $L_F(g^*)=0$ without knowing $F$. Therefore,}} we relax the above statistical supervenience to define $\varepsilon$-\textit{supervenience}:
 
 \begin{defi}
 \label{def2}
@@ -89,7 +89,7 @@ Let the physical property under consideration be brain connectivity structure (`
 
 While the above thought experiment addresses the question of $\varepsilon$-supervenience, it does not address causality. Assuming we have confirmed $\MeB$ for a particular mental/brain property pair with confidence level $\alpha$, then morphing the brain (by altering edges) could be used to determine whether the relation is in fact causal.
 
-Practical issues regarding actually conducting the above thought experiment include: (1) as stated, we must consider the space $\mB$ to be the quotient space of graphs mod graph isomorphism, unless the vertices are {\it labeled}; (2) a more informative and tractable distance on $\mB$ may be desired, as the $k_n$-nearest neighbor classifier under our Frobenius norm may have a rate of convergence so slow and a computational demand so high as to be impractical; and (3) collecting enough sufficiently accurate independent and identically distributed brain-graph data and the associated mental property indicators may be beyond current technological capabilities. Regardless, related experimental work includes collecting various types of brain graph data \cite{WhiteBrenner86, DenkHorstmann04, BriggmanDenk06} and various approaches to inference on brain graphs \cite{MackeBorst08, Mishchenko09, LuLichtman09}, suggesting feasibility of such an experiment in the near future (see Appendix 2 for a simulated example of a feasible experiment). Nevertheless, our thought experiment suggests that we can hope to determine that a given mental property under consideration $\varepsilon$-supervenes on a brain's connectivity structure. \tr{This thought experiment, together with (i) the formal definition of $\varepsilon$-supervenience, (ii) the brain-graph model, and (iii) the universal consistency proof on graphs, is the first \emph{proof} (to our knowledge) that ``hope'' of empirically investigating supervenience is possible.}
+Practical issues regarding actually conducting the above thought experiment include: (1) as stated, we must consider the space $\mB$ to be the quotient space of graphs mod graph isomorphism, unless the vertices are {\it labeled}; (2) a more informative and tractable distance on $\mB$ may be desired, as the $k_n$-nearest neighbor classifier under our Frobenius norm may have a rate of convergence so slow and a computational demand so high as to be impractical; and (3) collecting enough sufficiently accurate independent and identically distributed brain-graph data and the associated mental property indicators may be beyond current technological capabilities. Regardless, related experimental work includes collecting various types of brain graph data \cite{WhiteBrenner86, DenkHorstmann04, BriggmanDenk06} and various approaches to inference on brain graphs \cite{MackeBorst08, Mishchenko09, LuLichtman09}, suggesting feasibility of such an experiment in the near future (see Appendix 2 for a simulated example of a feasible experiment). Nevertheless, our thought experiment suggests that we can hope to determine that a given mental property under consideration $\varepsilon$-supervenes on a brain's connectivity structure. \tr{This thought experiment, together with (i) the formal definition of $\varepsilon$-supervenience, (ii) the brain-graph model, and (iii) the universal consistency proof on graphs, is the first \emph{proof} (to our knowledge) that empirically investigating supervenience is at least theoretically possible.}
 
 %% == end of paper:
 
@@ -119,7 +119,7 @@ If the graphs may have different numbers of vertices, and are unlabeled, we cons
 %\tr{Trivially, this argument also applies to graphs with (self-) loops, and
 %directed, colored, or weighted edges, and hypergraphs.}
 
-Several points of note: isolated vertices are ignored in our equivalence relation; the class-conditional signal is entirely encompassed by the connectivity structure; the graph isomorphism problem is computationally hard \cite{ConroyLouis97,ZaslavskiyVert08}; and the argument employed here does not capture the concept of ``nearness implies likelihood of similar class''---we simply rely on atomic behavior.
+Several points of note:  isolated vertices are ignored in our equivalence relation; the class-conditional signal is entirely encompassed by the connectivity structure; the graph isomorphism problem is computationally hard \cite{ConroyLouis97,ZaslavskiyVert08}; and the argument employed here does not capture the concept of ``nearness implies likelihood of similar class''---we simply rely on atomic behavior.
 
 %\appendix
 \section*{Appendix 2: Simulation} \label{simulation}
