new version, incorporating reviewer comments

--- a/supervenience.tex
+++ b/supervenience.tex
@@ -248,7 +248,7 @@ Thus, without restrictions on $\PP[M,B]$, arbitrarily slow convergence theorems 
 % subsubsection power_and_consistency (end)
 
 
-\section{A thought experiment to guarantee unity power} % (fold)
+\section{A thought experiment demonstrating unity power} % (fold)
 \label{sub:uc}
 
 % Below, we will assume that brains are characterized by graphs, referred to hereafter as ``brain-graphs.''  This assumption follows naturally from the neuron-doctrine
