resubmitted to PLOS ONE and posted update on arxiv

--- a/PLoS_ONE/2011_02_17/supervenience.tex
+++ b/PLoS_ONE/2011_02_17/supervenience.tex
@@ -79,7 +79,7 @@
 
 \newtheorem{defi}{Definition}
 \newtheorem{thm}{Theorem}
-\newtheorem{thex}{\emph{Gedanken} experiment}
+\newtheorem{thex}{\emph{Gedankenexperiment}}
 \lhead{Vogelstein JT, et al}
 \rhead{Statistical Supervenience}
 
@@ -250,7 +250,7 @@ Thus, without restrictions on $\PP[M,B]$, arbitrarily slow convergence theorems 
 % subsubsection power_and_consistency (end)
 
 
-\section{A \emph{gedanken} experiment demonstrating consistency and unity power} % (fold)
+\section{A \emph{Gedankenexperiment} demonstrating consistency and unity power} % (fold)
 \label{sub:uc}
 
 % Below, we will assume that brains are characterized by graphs, referred to hereafter as ``brain-graphs.''  This assumption follows naturally from the neuron-doctrine
@@ -305,7 +305,7 @@ the existence of a universally consistent classifier guarantees that eventually 
 \subsection{Summary} % (fold)
 \label{par:summary}
 
-We have introduced the notion of $\eps$-supervenience, which states that the Bayes optimal misclassification rate for any mind/brain property pair is less than $\eps$.  Furthermore, when we restrict the space of minds and brains to the setting of \emph{gedanken} experiment 1, we have shown that $k_n$-NN classifiers are universally consistent, such that one can derive a hypothesis test, with confidence level $\alpha$, that is guaranteed to converge to the Bayes optimal misclassification rate, given sufficient data, no matter the true (but unknown) distribution of mind/brain pair properties.  Alas, this is a one-sided test, so although power converges to unity, one can never determine whether (i) more data is necessary to get a lower p-value, or (ii) that the particular $\eps$-supervenience does not hold.  
+We have introduced the notion of $\eps$-supervenience, which states that the Bayes optimal misclassification rate for any mind/brain property pair is less than $\eps$.  Furthermore, when we restrict the space of minds and brains to the setting of \emph{Gedankenexperiment}  1, we have shown that $k_n$-NN classifiers are universally consistent, such that one can derive a hypothesis test, with confidence level $\alpha$, that is guaranteed to converge to the Bayes optimal misclassification rate, given sufficient data, no matter the true (but unknown) distribution of mind/brain pair properties.  Alas, this is a one-sided test, so although power converges to unity, one can never determine whether (i) more data is necessary to get a lower p-value, or (ii) that the particular $\eps$-supervenience does not hold.  
 
 \subsection{Practical issues} % (fold)
 \label{par:practical_issues}
@@ -345,7 +345,7 @@ Many of these studies can be framed as $\eps$-supervenience hypothesis tests.  F
 
 \subsection{Alternative explanations} % (fold)
 
-Although hypothesis testing for a particular $\epsilon$-supervenience appears to be possible based on the \emph{gedanken} experiment in Section \ref{sub:uc}, a natural question to raise is: what are the conceivable alternative hypotheses?  We consider three such alternatives.  
+Although hypothesis testing for a particular $\epsilon$-supervenience appears to be possible based on the \emph{Gedankenexperiment} in Section \ref{sub:uc}, a natural question to raise is: what are the conceivable alternative hypotheses?  We consider three such alternatives.  
 
 First, perhaps brains are more accurately characterized as quantum networks over classical networks.  Several authors have suggested that brains have certain hypercomputational properties that classical computers could not achieve \cite{Penrose99,Satinover02}. However, assuming that the computer can be represented as a network, the above results hold regardless of whether computations in the brain are quantum or classical.  This follows because quantum networks merely speed up computation for certain classes of problems; they cannot, however, solve problems that classical computers cannot \cite{NielsenChuang00}.  This means that if the above analysis failed to reject the null hypothesis at level $\alpha$, it will fail regardless of whether one assumes quantum or classical computations.
 
@@ -362,7 +362,7 @@ It therefore seems that failing to reject the null hypothesis that a particular 
 \subsection{Dynamics vs. statics} % (fold)
 \label{par:dynamics_vs_statics}
 
-The \emph{gedanken} experiment in Section \ref{sub:uc} did not require simulating any dynamics; rather, the dynamics are necessarily a function of the model parameters (statics).  Similarly, for the question of mind-brain supervenience in humans, one need not ever observe any activity of the brain, one must merely observe the model that determines the activity (in a potentially stochastic process). Thus, this approach to understanding the relationship between mind and brain is distinct from the standard systems neuroscience paradigm, in which the goal is typically to understand the neural activity ``code.''  In contrast, if mind-brain supervenience holds, it motivates a search for the neural \emph{connectivity} ``code,'' a so-called ``engram''  for memories \cite{Semon21, Lashley50, ZhangLinden03, ShemaDudai07, BerryDavis08}, or more generally a \emph{mengram}, the neural signature of any mental property, be it cognitive, psychological, or otherwise.  
+The \emph{Gedankenexperiment} in Section \ref{sub:uc} did not require simulating any dynamics; rather, the dynamics are necessarily a function of the model parameters (statics).  Similarly, for the question of mind-brain supervenience in humans, one need not ever observe any activity of the brain, one must merely observe the model that determines the activity (in a potentially stochastic process). Thus, this approach to understanding the relationship between mind and brain is distinct from the standard systems neuroscience paradigm, in which the goal is typically to understand the neural activity ``code.''  In contrast, if mind-brain supervenience holds, it motivates a search for the neural \emph{connectivity} ``code,'' a so-called ``engram''  for memories \cite{Semon21, Lashley50, ZhangLinden03, ShemaDudai07, BerryDavis08}, or more generally a \emph{mengram}, the neural signature of any mental property, be it cognitive, psychological, or otherwise (note that supervenience allows for the particular mengram of a mental property to vary both across individuals and time).  
 
 % paragraph dynamics_vs_statics (end)
 
@@ -371,7 +371,7 @@ The \emph{gedanken} experiment in Section \ref{sub:uc} did not require simulatin
 
 % paragraph concluding_thoughts (end)
 
-This \emph{gedanken} experiment, together with (i) the formal definition of $\varepsilon$-supervenience as a constraint on distributions, (ii) the brain-graph model, and (iii) the universal consistency proof on graphs, is the first demonstration (to our knowledge) that empirically investigating supervenience is at least theoretically possible. The above discussion suggests that many previously conducted investigations either assume supervenience, or test it.  Further, new technologies facilitate testing supervenience of mental properties on brain-graphs more easily.
+This \emph{Gedankenexperiment}, together with (i) the formal definition of $\varepsilon$-supervenience as a constraint on distributions, (ii) the brain-graph model, and (iii) the universal consistency proof on graphs, is the first demonstration (to our knowledge) that empirically investigating supervenience is at least theoretically possible. The above discussion suggests that many previously conducted investigations either assume supervenience, or test it.  Further, new technologies facilitate testing supervenience of mental properties on brain-graphs more easily.
 
 
 \clearpage
